# spaced-repetition

./: .env-sample  .gitignore  README.md  TEST_PLAN.md  cli.py  main.py  package-lock.json  package.json  pyproject.toml  questions.db  questions.txt  requirements-dev.txt  requirements.txt  templates.py
binary_search/: challenge.py  test_challenge.py
bubble_sort/: challenge.py  test_challenge.py
db/: operations.py  schema.py
helpers/: challenges.py  mcq_questions.py  questions.py
rotate_an_array/: challenge.py  test_challenge.py
src/: config.py  questions.db  templates.py
src/controllers/: challenge.py  export_import.py  mcq.py  question.py
src/db/: connection.py  database_manager.py  schema.py
src/models/: challenge.py  evaluation.py  mcq.py  question.py  sm2.py
src/repositories/: challenge.py  mcq.py  question.py
src/services/: __init__.py  api_client.py  evaluator.py
src/utils/: json_schema.py
src/views/: challenge.py  mcq.py  question.py
tests/: conftest.py
tests/unit/models/: test_challenge.py  test_evaluation.py  test_mcq.py  test_question.py  test_sm2.py
tests/unit/services/: test_api_client.py  test_evaluator.py
