[project]
name = "spaced-repetition"
version = "0.1.0"
description = ""
authors = [
    {name = "guilhermegouw",email = "guilherme.gouw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.19.1,<0.20.0)",
    "rich (>=14.1.0,<15.0.0)",
    "questionary (>=2.1.1,<3.0.0)",
    "pyperclip (>=1.10.0,<2.0.0)",
    "pydantic (>=2.11.9,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pytest = "^8.4.2"

[tool.black]
line-length = 79
